deps , verified java 24